...
    val showInNavigation: Boolean
) {
    Loading("Loading", "Load", requiresAuthentication = false, showInNavigation = false),
    Login("Sign in", "Login", requiresAuthentication = false, showInNavigation = false),
    Home("Home", "Home", requiresAuthentication = true, showInNavigation = true),
    GameType("Game type", "Game", requiresAuthentication = true, showInNavigation = true),
    Players("Players", "Players", requiresAuthentication = true, showInNavigation = true),
    Seasons("Seasons", "Seasons", requiresAuthentication = true, showInNavigation = true),
    Handicaps("Handicaps", "Hcap", requiresAuthentication = true, showInNavigation = true),
    Scoring("Scoring", "Score", requiresAuthentication = true, showInNavigation = true),
    Settings("Settings", "Settings", requiresAuthentication = true, showInNavigation = true)
}

object RBDartsDestinations {
    val topLevel: List<RBDartsRoute> = RBDartsRoute.entries.filter { it.showInNavigation }
...
